--- a/src/components/LoginForm/index.css
+++ b/src/components/LoginForm/index.css
@@ -7,42 +7,48 @@
 }
 
 .login-form {
-  background-color: #272727;
-  padding: 40px;
+  background-color: #202020;
+  padding: 30px;
   border-radius: 8px;
-  width: 320px;
+  width: 300px;
   display: flex;
   flex-direction: column;
-  color: white;
 }
 
-.title {
-  text-align: center;
-  margin-bottom: 20px;
+.login-logo {
+  width: 120px;
+  margin: 0 auto 20px;
 }
 
 label {
-  font-size: 14px;
-  margin-bottom: 5px;
+  color: #ffffff;
+  font-size: 12px;
+  margin-top: 10px;
 }
 
 input {
   padding: 8px;
-  margin-bottom: 15px;
+  margin-top: 5px;
   border-radius: 4px;
   border: none;
 }
 
 button {
+  margin-top: 20px;
   padding: 10px;
-  background-color: #4f46e5;
-  color: white;
+  background-color: #6366f1;
+  color: #ffffff;
   border: none;
   cursor: pointer;
+  border-radius: 4px;
 }
 
-.error {
+button:hover {
+  background-color: #4f46e5;
+}
+
+.error-msg {
   color: #ff0b37;
+  font-size: 12px;
   margin-top: 10px;
-  font-size: 14px;
 }
